[tool.poetry]
name = "pythonprodjango"
version = "0.1.0"
description = "Módulo de Django - Curso Python Pro"
authors = ["Herbety Paulo <herbetyp@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
gunicorn = "^20.0.4"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
django-s3-folder-storage = "^0.5"
collectfast = "^2.2.0"
sentry-sdk = "^0.16.2"
django-ordered-model = "^3.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest-django = "^3.9.0"
pytest-cov = "^2.10.0"
codecov = "^2.1.8"
pre-commit = "^2.6.0"
model-bakery = "^1.1.1"
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
